@@ -58,6 +58,7 @@
   *  - Renamed the USB_PowerOnErrorCodes_t enum to USB_InitErrorCodes_t, renamed the POWERON_ERROR_NoUSBModeSpecified enum value to
   *    USB_INITERROR_NoUSBModeSpecified
   *  - Renamed USB_PowerOnFail event to USB_InitFailure
+  *  - Renamed OTG.h header functions to be more consistent with the rest of the library API
   *  - Changed over all deprecated GCC structure tag initializers to the standardized C99 format (thanks to Mike Alexander)
   *  - USB_HostRequest renamed to USB_ControlRequest, entire control request header is now read into USB_ControlRequest in Device mode
   *    rather than having the library pass only partially read header data to the application
